2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView_DragAndDrop.cs:
	Fix the regression where the New Playlist wouldn't appear in the sources
	list when you were drag and dropping some tracks.

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/ScreensaverManager.cs:
	Keep track of whether the screensaver is already inhibited.  Implement
	IDisposable and uninhibit when Disposed.

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingInterface.cs:
	Override Dispose and call Dispose on the ScreensaveManager.

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/NowPlayingSource.cs:
	Call Dispose on the NowPlayingInterface.

	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Make all track
	actions not visible/sensitive when dealing with a non ITrackModelSoure,
	for example the Now Playing source (BGO #538398).

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	Patches from Bertrand Lorentz fixing issues with files in folders whose
	name start the same as the library folder.

	* src/Core/Banshee.Core/Banshee.Base/Paths.cs: Add
	CachedLibraryLocationWithSeparator property.  Fix MakePathRelative method
	to add a path seperator as needed (BGO #539511).

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	Use the new -WithSeparator property, fixing copy-on-import (BGO #533177).

	* src/Core/Banshee.Core/Banshee.Base/Tests/FileNamePatternTests.cs: Unit
	tests written by me to make sure MakePathRelative works how we expect it
	to.

2008-07-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs:
	Create default columns within a private method so we can manipulate them
	beyond just their ctor (not yet done, but will use this to set better
	widths soon).  Also, use the new Column/QueryField integration to avoid