@@ -1,18 +1,11 @@
 AC_DEFUN([BANSHEE_CHECK_DAAP],
 [
-	AC_ARG_ENABLE([daap], AC_HELP_STRING([--disable-daap], 
-		[Do not build with DAAP support]),
-		[
-			if test "x$enableval" = "xno"; then
-				enable_daap=no
-			elif test "x$enableval" = "xyes"; then
-				enable_daap=yes
-			fi
-		], enable_daap=no
-	)
+	MZC_REQUIRED=0.7.3
+
+	AC_ARG_ENABLE(daap, AC_HELP_STRING([--disable-daap], [Disable DAAP support]), , enable_daap="yes")
 
 	if test "x$enable_daap" = "xyes"; then
-		PKG_CHECK_MODULES(MONO_ZEROCONF, mono-zeroconf >= 0.7.3)
+		PKG_CHECK_MODULES(MONO_ZEROCONF, mono-zeroconf >= $MZC_REQUIRED)
 		AC_SUBST(MONO_ZEROCONF_LIBS)
 		AM_CONDITIONAL(DAAP_ENABLED, true)
 	else
